<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NewsFragment"
    android:background="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/protect_from_corona_header_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trending_videos_header_text"
            android:textColor="#000000"
            android:textSize="20sp"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:gravity="bottom"/>
        <TextView
            android:id="@+id/underline_text_view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/protect_from_corona_header_text_view"
            android:background="@android:color/black"/>
        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/underline_text_view">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/player_view_1"
                    android:layout_width="320dp"
                    android:padding="16dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/tracker_frag_latest_update_background"
                    android:layout_height="220dp"
                    app:autoPlay="false"
                    app:videoId="@string/first_video_MuskurayegaIndia"
                    app:showFullScreenButton="true"
                    app:showYouTubeButton="false"/>

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/player_view_2"
                    android:layout_width="320dp"
                    android:padding="16dp"
                    android:layout_toRightOf="@id/player_view_1"
                    android:layout_margin="16dp"
                    android:background="@drawable/tracker_frag_latest_update_background"
                    android:layout_height="220dp"
                    app:autoPlay="false"
                    app:videoId="@string/second_video_WHO_corona_preventions_english"
                    app:showFullScreenButton="true"
                    app:showYouTubeButton="false"/>

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/player_view_3"
                    android:layout_width="320dp"
                    android:padding="16dp"
                    android:layout_toRightOf="@id/player_view_2"
                    android:layout_margin="16dp"
                    android:background="@drawable/tracker_frag_latest_update_background"
                    android:layout_height="220dp"
                    app:autoPlay="false"
                    app:videoId="@string/third_video_Coronavirus_in_Hindi_Apollo_Hospitals"
                    app:showFullScreenButton="true"
                    app:showYouTubeButton="false"/>

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/player_view_4"
                    android:layout_width="320dp"
                    android:padding="16dp"
                    android:layout_toRightOf="@id/player_view_3"
                    android:layout_margin="16dp"
                    android:background="@drawable/tracker_frag_latest_update_background"
                    android:layout_height="220dp"
                    app:autoPlay="false"
                    app:videoId="@string/fourth_video_Teri_Mitti_Tribute"
                    app:showFullScreenButton="true"
                    app:showYouTubeButton="false"/>
            </RelativeLayout>
        </HorizontalScrollView>
        <LinearLayout
            android:id="@+id/trending_news_header_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/horizontal_scroll_view">
            <TextView
                android:id="@+id/trending_news_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_news_header_text"
                android:textColor="#000000"
                android:textSize="20sp"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:gravity="bottom"/>
            <TextView
                android:id="@+id/total_articles_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <TextView
            android:id="@+id/underline_text_view_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/trending_news_header_linear_layout"
            android:background="@android:color/black"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trending_news_recyler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/underline_text_view_2"
            android:layout_margin="8dp"
            android:nestedScrollingEnabled="false"/>
        <ProgressBar
            android:id="@+id/progress_bar_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/underline_text_view_2"
            android:layout_centerHorizontal="true"
            android:theme="@style/ProgressBarTheme"/>
    </RelativeLayout>
</ScrollView>