<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:id="@+id/toolbar_1" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize"
            android:background="@color/colorPrimary"
            app:tabIndicatorColor="#E91E63">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TabItem1"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TabItem2" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TabItem3" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tablayout2"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_FAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="24dp"
            app:fabCustomSize="66dp"
            android:scaleType="center"
            android:backgroundTint="@color/fab_background_color"
            app:maxImageSize="76dp"
            android:src="@drawable/icon_stethoscope"/>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        app:menu="@menu/drawer_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layout"
        android:fitsSystemWindows="true">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>