<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/home_fragment_root_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">
            <RelativeLayout
                android:id="@+id/latest_update_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:padding="16dp"
                android:layout_margin="16dp"
                android:background="@drawable/tracker_frag_latest_update_background">
                <TextView
                    android:id="@+id/latest_update_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest_update_header_text"
                    android:layout_centerHorizontal="true"
                    android:textSize="24sp"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"/>

                <RelativeLayout
                    android:id="@+id/active_cases_relative_layout"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/latest_update_text_view"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/active_update_text_view_background">

                    <TextView
                        android:id="@+id/active_cases_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/active_cases_sub_title_text_color"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="5dp"
                        android:text="@string/active_cases_sub_title_text"
                        android:textColor="@color/active_cases_sub_title_text_color"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/deceased_cases_relative_layout"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/latest_update_text_view"
                    android:layout_marginLeft="27dp"
                    android:layout_marginTop="24dp"
                    android:layout_toRightOf="@id/active_cases_relative_layout"
                    android:background="@drawable/deceased_update_text_view_background">

                    <TextView
                        android:id="@+id/deceased_cases_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/death_cases_sub_title_text_color"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="5dp"
                        android:text="@string/death_cases_sub_title_text"
                        android:textColor="@color/death_cases_sub_title_text_color" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/recovered_cases_relative_layout"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/recovered_update_text_view_background"
                    android:layout_below="@id/active_cases_relative_layout"
                    android:layout_centerHorizontal="true">
                    <TextView
                        android:id="@+id/recovered_cases_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/recovered_cases_sub_title_text_color"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered_cases_sub_title_text"
                        android:textColor="@color/recovered_cases_sub_title_text_color"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="5dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
                <Button
                    android:id="@+id/btn_sync"
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    android:text="sync"
                    android:textSize="10sp"
                    android:background="@color/splash_screen_background_color"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"/>
                <TextView
                    android:id="@+id/update_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="10sp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="@android:color/black"/>

            </RelativeLayout>
            <ImageView
                android:id="@+id/preventive_measures_image_view"
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:layout_margin="16dp"
                android:background="@drawable/tracker_frag_latest_update_background"
                android:paddingTop="16dp"
                android:scaleType="fitXY"
                android:layout_below="@id/latest_update_relative_layout"
                android:src="@drawable/preventive_measures_1" />
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/ProgressBarTheme"
                android:layout_below="@id/latest_update_relative_layout"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>